Fri 09/19/2025 : fix raiden ei card effect 1

--- a/strings.conf
+++ b/strings.conf
@@ -4,9 +4,11 @@
 !setname 0x3700	Inazuma
 !setname 0x4700	Sumeru
 !setname 0x5700	Fontaine
+
 !counter 0x300 Lullaby
 !counter 0x301 Akara
-
+!counter 0x302 Pillar 
+!counter 0x303 Lighting 
 
 
 
